Refactor index.html for layout and styling improvements
Refactor HTML structure and improve styling for better layout and readability.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>Calculadora de Horas (Supabase)</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <!-- Carregue o SDK do Supabase antes do seu script -->
+  <!-- SDK do Supabase -->
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
   <style>
     :root {
@@ -14,109 +14,107 @@
     }
     * { box-sizing: border-box; }
     body { margin:0; background:var(--bg); color:var(--text); font-family: Inter, Arial, sans-serif; }
-    .container { max-width:960px; margin:28px auto; padding:0 16px; }
-    h1 { margin:0 0 16px; font-weight:700; }
+    h1,h3 { margin:0 0 12px; }
+    .layout { display:flex; min-height:100vh; }
+    .main { flex:3; padding:20px; }
+    .sidebar { flex:1; padding:16px; background:var(--panel); border-left:1px solid var(--border); }
     .card { background:var(--panel); border:1px solid var(--border); border-radius:12px; padding:16px; margin-bottom:18px; }
-    label { display:block; font-size:12px; color:var(--muted); margin-bottom:6px; }
-    input { width:100%; padding:10px 12px; border-radius:10px; border:1px solid var(--border); background:#0e0e0e; color:var(--text); outline:none; }
-    input::placeholder { color:#7a7a7a; }
     .row { display:flex; gap:10px; flex-wrap:wrap; }
     .col { flex:1; min-width:160px; }
+    input { width:100%; padding:10px 12px; border-radius:10px; border:1px solid var(--border); background:#0e0e0e; color:var(--text); outline:none; }
+    input::placeholder { color:#7a7a7a; }
     .btn { padding:10px 14px; border-radius:10px; border:1px solid var(--border); background:#151515; color:var(--text); cursor:pointer; transition:border-color .15s ease, transform .15s ease; }
     .btn:hover { transform:translateY(-1px); border-color:var(--accent); }
     .btn.primary { background:var(--green); border-color:var(--green); color:#0b0b0b; }
     .btn.blue { background:var(--blue); border-color:var(--blue); color:#0b0b0b; }
-    .btn.orange { background:var(--orange); border-color:var(--orange); color:#0b0b0b; }
     .btn.red { background:var(--red); border-color:var(--red); color:#0b0b0b; }
+    .btn.orange { background:var(--orange); border-color:var(--orange); color:#0b0b0b; }
     .muted { color:var(--muted); font-size:13px; }
-    .chip { display:inline-flex; align-items:center; gap:8px; padding:8px 10px; border-radius:999px; background:#151515; border:1px solid var(--border); margin:6px 6px 0 0; cursor:pointer; }
+
+    /* Chips menores na sidebar */
+    .chip { display:flex; align-items:center; justify-content:space-between; gap:8px;
+            padding:6px 8px; border-radius:999px; background:#151515; border:1px solid var(--border);
+            margin:6px 0; cursor:pointer; font-size:13px; }
     .chip.selected { background:var(--green); color:#0b0b0b; border-color:var(--green); }
-    .chip .label { font-weight:600; }
-    .chip .actions { display:inline-flex; gap:6px; margin-left:8px; }
-    .mini-btn { padding:4px 8px; border-radius:8px; font-size:12px; border:1px solid var(--border); background:#1a1a1a; color:var(--text); cursor:pointer; }
+    .chip .label { font-weight:600; overflow:hidden; text-overflow:ellipsis; white-space:nowrap; }
+    .chip .actions { display:flex; gap:6px; }
+    .mini-btn { padding:3px 8px; border-radius:8px; font-size:11px; border:1px solid var(--border); background:#1a1a1a; color:var(--text); cursor:pointer; }
     .mini-btn.orange { background:var(--orange); color:#0b0b0b; border-color:var(--orange); }
     .mini-btn.red { background:var(--red); color:#0b0b0b; border-color:var(--red); }
+
     table { width:100%; border-collapse:collapse; overflow:hidden; border-radius:12px; }
     th,td { padding:10px 12px; border-bottom:1px solid var(--border); text-align:left; font-size:14px; }
     thead th { background:#141414; color:var(--muted); }
     .badge { display:inline-block; padding:4px 10px; border-radius:999px; background:#1a1a1a; border:1px solid var(--border); font-size:12px; }
-    .reg-btn { cursor:pointer; color:var(--red); font-weight:700; display:inline-block; margin:2px 0; }
-    .reg-btn:hover { text-decoration:underline; }
-    .error { color:var(--red); font-size:13px; margin-top:8px; }
+
+    /* Área separada de registros */
+    .reg-list { display:flex; flex-direction:column; gap:8px; }
+    .reg-item { display:flex; align-items:center; justify-content:space-between; background:#151515; border:1px solid var(--border); border-radius:10px; padding:8px 10px; }
+    .reg-item .time { font-weight:600; }
+    .reg-item .remove { color:#ef4444; cursor:pointer; font-weight:700; }
+
+    /* Ranking */
+    .rank { background:#1a1a1a; border:1px solid var(--border); border-radius:10px; padding:10px; margin-top:10px; }
+    .rank-item { display:flex; justify-content:space-between; padding:6px 8px; border-radius:8px; background:#151515; border:1px solid var(--border); margin:6px 0; }
+    .rank-pos { font-weight:700; }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>Calculadora de horas</h1>
-    <p class="muted">Selecione um funcionário, adicione registros e clique nos registros para remover.</p>
+  <div class="layout">
+    <div class="main">
+      <h1>Calculadora de horas</h1>
+      <p class="muted">Selecione um funcionário na lateral direita. Adicione registros e gerencie abaixo.</p>
 
-    <div class="card">
+      <div class="card">
+        <h3>Adicionar horas</h3>
+        <div class="row">
+          <div class="col"><label>Horas</label><input id="horas" type="number" min="0" placeholder="0"></div>
+          <div class="col"><label>Minutos</label><input id="minutos" type="number" min="0" max="59" placeholder="0"></div>
+          <div class="col"><label>Segundos</label><input id="segundos" type="number" min="0" max="59" placeholder="0"></div>
+          <div style="align-self:end;"><button class="btn primary" id="btnAddRegistro">Registrar</button></div>
+          <div style="align-self:end;"><button class="btn blue" id="btnOrdenar">Ordenar por total</button></div>
+        </div>
+        <div id="msgErro" class="error" style="display:none;"></div>
+      </div>
+
+      <div class="card">
+        <h3>Resultados</h3>
+        <table>
+          <thead>
+            <tr><th>Nome</th><th>ID</th><th>Total (h:m:s)</th><th>Total (segundos)</th></tr>
+          </thead>
+          <tbody id="tabelaBody"></tbody>
+        </table>
+
+        <div class="rank">
+          <h3>🏆 Ranking Top 3</h3>
+          <div id="rankList"></div>
+        </div>
+      </div>
+
+      <div class="card">
+        <h3>Registros do funcionário selecionado</h3>
+        <div id="registrosArea" class="reg-list"></div>
+      </div>
+    </div>
+
+    <div class="sidebar">
       <h3>Funcionários</h3>
       <div id="listaFuncionarios"></div>
-      <div class="row" style="margin-top:12px;">
-        <div class="col">
-          <label>Nome</label>
-          <input id="novoNome" type="text" placeholder="Ex.: Christian">
-        </div>
-        <div class="col">
-          <label>ID</label>
-          <input id="novoId" type="text" placeholder="Ex.: 101">
-        </div>
-        <div style="align-self:end;">
-          <button class="btn primary" id="btnAddFuncionario">Adicionar funcionário</button>
-        </div>
+      <div style="margin-top:12px;" class="row">
+        <div class="col"><input id="novoNome" type="text" placeholder="Nome"></div>
+        <div class="col"><input id="novoId" type="text" placeholder="ID"></div>
       </div>
-      <div class="row" style="margin-top:12px;">
-        <div class="col" style="flex:0 0 auto;">
-          <button class="btn red" id="btnLimparTodos">Limpar registros de TODOS os funcionários</button>
-        </div>
+      <div class="row" style="margin-top:8px;">
+        <div class="col" style="flex:0 0 auto;"><button class="btn primary" id="btnAddFuncionario">Adicionar</button></div>
+        <div class="col" style="flex:0 0 auto;"><button class="btn red" id="btnLimparTodos">Limpar TODOS os registros</button></div>
       </div>
-    </div>
-
-    <div class="card">
-      <h3>Adicionar horas</h3>
-      <div class="row">
-        <div class="col">
-          <label>Horas</label>
-          <input id="horas" type="number" min="0" placeholder="0">
-        </div>
-        <div class="col">
-          <label>Minutos</label>
-          <input id="minutos" type="number" min="0" max="59" placeholder="0">
-        </div>
-        <div class="col">
-          <label>Segundos</label>
-          <input id="segundos" type="number" min="0" max="59" placeholder="0">
-        </div>
-        <div style="align-self:end;">
-          <button class="btn primary" id="btnAddRegistro">Adicionar registro</button>
-        </div>
-        <div style="align-self:end;">
-          <button class="btn blue" id="btnOrdenar">Ordenar do maior para o menor</button>
-        </div>
-      </div>
-      <div id="msgErro" class="error" style="display:none;"></div>
-    </div>
-
-    <div class="card">
-      <h3>Resultados</h3>
-      <table>
-        <thead>
-          <tr>
-            <th>Nome</th>
-            <th>ID</th>
-            <th>Total (h:m:s)</th>
-            <th>Total (segundos)</th>
-            <th>Registros</th>
-          </tr>
-        </thead>
-        <tbody id="tabelaBody"></tbody>
-      </table>
+      <p class="muted" style="margin-top:8px;">Use “Editar” para alterar nome/ID (migra registros). “Limpar” apaga registros do funcionário.</p>
     </div>
   </div>
 
   <script>
-    // Cliente Supabase (usa a global window.supabase do SDK carregado no head)
+    // Cliente Supabase
     const supabase = window.supabase.createClient(
       "https://pldamguukjeuakrvfbzf.supabase.co",
       "sb_publishable_UybNTjqz8fdbDLFhxJvO5Q_78P0AM6Y"
@@ -135,6 +133,8 @@
     // DOM refs
     const listaFuncionariosEl=document.getElementById("listaFuncionarios");
     const tabelaBodyEl=document.getElementById("tabelaBody");
+    const registrosArea=document.getElementById("registrosArea");
+    const rankList=document.getElementById("rankList");
     const novoNomeEl=document.getElementById("novoNome");
     const novoIdEl=document.getElementById("novoId");
     const horasEl=document.getElementById("horas");
@@ -142,9 +142,9 @@
     const segundosEl=document.getElementById("segundos");
     const msgErroEl=document.getElementById("msgErro");
 
-    // UI helpers
     function showError(msg){msgErroEl.textContent=msg;msgErroEl.style.display="block";setTimeout(()=>{msgErroEl.style.display="none";},3000);}
 
+    // Render sidebar de funcionários
     function renderFuncionarios(){
       listaFuncionariosEl.innerHTML="";
       if(funcionarios.length===0){
@@ -154,7 +154,6 @@
       funcionarios.forEach((f,idx)=>{
         const chip=document.createElement("div");
         chip.className="chip"+(funcionarioSelecionado===idx?" selected":"");
-        chip.title="Selecionar";
         chip.addEventListener("click",()=>selecionarFuncionario(idx));
 
         const label=document.createElement("span");
@@ -171,7 +170,8 @@
 
         const clearBtn=document.createElement("button");
         clearBtn.className="mini-btn";
-        clearBtn.textContent="Limpar registros";
+        clearBtn.textContent="Limpar";
+        clearBtn.title="Limpar registros deste funcionário";
         clearBtn.addEventListener("click",(e)=>{e.stopPropagation();limparRegistrosFuncionario(f.id,f.nome);});
 
         const delBtn=document.createElement("button");
@@ -182,54 +182,78 @@
         actions.appendChild(editBtn);
         actions.appendChild(clearBtn);
         actions.appendChild(delBtn);
+
         chip.appendChild(label);
         chip.appendChild(actions);
         listaFuncionariosEl.appendChild(chip);
       });
     }
 
-    function renderTabela(lista=null){
+    // Render tabela geral e ranking
+    function renderTabela(){
       tabelaBodyEl.innerHTML="";
-      const dados = lista || Object.values(pessoas);
+      const dados = Object.values(pessoas);
       if(dados.length===0){
-        const tr=document.createElement("tr");
-        tr.innerHTML=`<td colspan="5" class="muted">Sem registros.</td>`;
-        tabelaBodyEl.appendChild(tr);
+        tabelaBodyEl.innerHTML=`<tr><td colspan="4" class="muted">Sem registros.</td></tr>`;
+      } else {
+        dados.forEach(p=>{
+          const tr=document.createElement("tr");
+          tr.innerHTML=`<td>${p.nome}</td><td>${p.id}</td><td><span class="badge">${fmtHMS(p.total)}</span></td><td>${p.total}</td>`;
+          tabelaBodyEl.appendChild(tr);
+        });
+      }
+      renderRanking(dados);
+      renderRegistrosSelecionado();
+    }
+
+    function renderRanking(dados){
+      rankList.innerHTML="";
+      const top = [...dados].sort((a,b)=>b.total-a.total).slice(0,3);
+      if(top.length===0){
+        rankList.innerHTML=`<div class="muted">Sem dados para o ranking.</div>`;
         return;
       }
-      dados.forEach(p=>{
-        const tr=document.createElement("tr");
-
-        const tdNome=document.createElement("td"); tdNome.textContent=p.nome;
-        const tdId=document.createElement("td"); tdId.textContent=p.id;
-        const tdTotalFmt=document.createElement("td"); tdTotalFmt.innerHTML=`<span class="badge">${fmtHMS(p.total)}</span>`;
-        const tdTotal=document.createElement("td"); tdTotal.textContent=p.total;
-
-        const tdRegs=document.createElement("td");
-        p.registros.forEach(r=>{
-          const span=document.createElement("span");
-          span.className="reg-btn";
-          span.textContent=`${r.h}h ${r.m}m ${r.s}s`;
-          span.dataset.registroId=r.id;
-          tdRegs.appendChild(span);
-          tdRegs.appendChild(document.createElement("br"));
-        });
-
-        tr.appendChild(tdNome);
-        tr.appendChild(tdId);
-        tr.appendChild(tdTotalFmt);
-        tr.appendChild(tdTotal);
-        tr.appendChild(tdRegs);
-        tabelaBodyEl.appendChild(tr);
+      top.forEach((p,i)=>{
+        const item=document.createElement("div");
+        item.className="rank-item";
+        const pos=i+1;
+        item.innerHTML=`<span class="rank-pos">${pos}º</span><span>${p.nome}</span><span>${fmtHMS(p.total)}</span>`;
+        rankList.appendChild(item);
       });
     }
 
-    // Remoção individual de registro ao clicar
+    // Área separada: registros do funcionário selecionado
+    function renderRegistrosSelecionado(){
+      registrosArea.innerHTML="";
+      if(funcionarioSelecionado===null){
+        registrosArea.innerHTML=`<div class="muted">Selecione um funcionário para ver os registros.</div>`;
+        return;
+      }
+      const f=funcionarios[funcionarioSelecionado];
+      const chave=chavePessoa(f.nome,f.id);
+      const pessoa=pessoas[chave];
+
+      if(!pessoa || pessoa.registros.length===0){
+        registrosArea.innerHTML=`<div class="muted">Sem registros para ${f.nome}.</div>`;
+        return;
+      }
+
+      pessoa.registros.forEach(r=>{
+        const item=document.createElement("div");
+        item.className="reg-item";
+        item.innerHTML=`
+          <span class="time">${r.h}h ${r.m}m ${r.s}s</span>
+          <span class="remove" data-id="${r.id}" title="Remover">Remover</span>
+        `;
+        registrosArea.appendChild(item);
+      });
+    }
+
+    // Delegação para remover registro individual (na área separada)
     document.addEventListener("click", async (e)=>{
       const el=e.target;
-      if(el.classList.contains("reg-btn")){
-        const idRegistro=el.dataset.registroId;
-        if(!idRegistro) return;
+      if(el.classList.contains("remove") && el.dataset.id){
+        const idRegistro=el.dataset.id;
         if(!confirm("Tem certeza que deseja remover este registro?")) return;
         await removerRegistro(idRegistro);
       }
@@ -262,6 +286,7 @@
     async function selecionarFuncionario(idx){
       funcionarioSelecionado=idx;
       renderFuncionarios();
+      renderRegistrosSelecionado();
     }
 
     async function adicionarFuncionario(){
@@ -358,10 +383,8 @@
       await carregarRegistros();
     }
 
-    // Limpar registros de TODOS os funcionários
     async function limparRegistrosTodos(){
       if(!confirm("Deseja limpar TODOS os registros de TODOS os funcionários? Esta ação não pode ser desfeita.")) return;
-      // Deleta todos os registros (usa neq para evitar queries vazias em alguns ambientes)
       const { error } = await supabase.from("registros").delete().neq("id", 0);
       if(error){ alert("Erro ao limpar todos os registros: " + error.message); return; }
       await carregarRegistros();
@@ -369,7 +392,18 @@
 
     function ordenarTabela(){
       const lista = Object.values(pessoas).sort((a,b)=>b.total - a.total);
-      renderTabela(lista);
+      // Render apenas visual (não altera estado pessoas)
+      tabelaBodyEl.innerHTML="";
+      if(lista.length===0){
+        tabelaBodyEl.innerHTML=`<tr><td colspan="4" class="muted">Sem registros.</td></tr>`;
+      } else {
+        lista.forEach(p=>{
+          const tr=document.createElement("tr");
+          tr.innerHTML=`<td>${p.nome}</td><td>${p.id}</td><td><span class="badge">${fmtHMS(p.total)}</span></td><td>${p.total}</td>`;
+          tabelaBodyEl.appendChild(tr);
+        });
+      }
+      renderRanking(lista);
     }
 
     // Eventos
