--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <title>Calculadora de Horas (Supabase)</title>
+  <title>Calculadora de Horas</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <!-- Supabase SDK -->
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
   <style>
     :root {
       --bg: #0b0b0b; --panel: #121212; --border: #1e1e1e;
       --text: #e9e9e9; --muted: #9a9a9a;
-      --green: #2ecc71; --blue: #3b82f6; --orange: #f59e0b; --red: #ef4444;
-      --gold: #ffd700;
+      --green: #2ecc71; --blue: #3b82f6; --orange: #f59e0b; --red: #ef4444; --gold: #ffd700;
     }
     * { box-sizing: border-box; }
     body { margin:0; background:var(--bg); color:var(--text); font-family: Arial, sans-serif; }
@@ -50,7 +50,6 @@
     .badge { display:inline-block; padding:4px 10px; border-radius:999px; background:#1a1a1a; border:1px solid var(--border); font-size:12px; }
     .badge.Dono { background:var(--gold); color:#0b0b0b; font-weight:700; }
     .badge.Gerente { background:var(--blue); color:#0b0b0b; font-weight:700; }
-    .resp-item .remove { color:var(--red); cursor:pointer; font-weight:700; }
 
     /* Tabela e registros */
     table { width:100%; border-collapse:collapse; overflow:hidden; border-radius:12px; }
@@ -92,7 +91,7 @@
       <div id="listaResponsaveis" class="resp-list"></div>
       <div class="row" style="margin-top:12px;">
         <div class="col"><input id="novoResponsavelNome" type="text" placeholder="Nome do responsável"></div>
-        <div class="col"><input id="novoResponsavelId" type="text" placeholder="ID do responsável"></div>
+        <div class="col"><input id="novoResponsavelId" type="text" placeholder="ID do responsável (opcional)"></div>
         <div class="col">
           <select id="novoResponsavelCargo">
             <option value="Dono">Dono</option>
@@ -141,7 +140,7 @@
   </div>
 
   <script>
-    // Supabase client
+    // Declaração única do cliente Supabase
     const supabase = window.supabase.createClient(
       "https://pldamguukjeuakrvfbzf.supabase.co",
       "sb_publishable_UybNTjqz8fdbDLFhxJvO5Q_78P0AM6Y"
@@ -179,7 +178,7 @@
     function showError(msg){
       msgErroEl.textContent=msg;
       msgErroEl.style.display="block";
-      setTimeout(()=>{msgErroEl.style.display="none";},3000);
+      setTimeout(()=>{msgErroEl.style.display="none";},3500);
     }
 
     // ---------- Funcionários ----------
@@ -306,6 +305,98 @@
       });
     }
 
+    // ---------- Donos e Gerentes ----------
+    function renderResponsaveis(){
+      listaResponsaveisEl.innerHTML="";
+      if(!responsaveis || responsaveis.length===0){
+        listaResponsaveisEl.innerHTML = "<div class='muted'>Nenhum responsável cadastrado.</div>";
+        return;
+      }
+      responsaveis.forEach(r=>{
+        const item=document.createElement("div");
+        item.className="resp-item";
+
+        const left=document.createElement("div");
+        left.className="left";
+
+        const name=document.createElement("span");
+        name.className="name";
+        name.textContent=r.nome;
+
+        const idspan=document.createElement("span");
+        idspan.className="id";
+        idspan.textContent=`ID: ${r.id_ref ?? "-"}`;
+
+        const cargo=document.createElement("span");
+        cargo.className=`badge ${r.cargo}`;
+        cargo.textContent=r.cargo;
+
+        left.appendChild(name);
+        left.appendChild(idspan);
+        left.appendChild(cargo);
+
+        const remove=document.createElement("span");
+        remove.className="remove";
+        remove.textContent="Remover";
+        remove.addEventListener("click", async ()=>{
+          await removerResponsavel(r.id);
+        });
+
+        item.appendChild(left);
+        item.appendChild(remove);
+        listaResponsaveisEl.appendChild(item);
+      });
+    }
+
+    async function carregarResponsaveis(){
+      const { data, error } = await supabase.from("responsaveis").select("*").order("id",{ascending:true});
+      if(error){ console.error(error); showError("Erro ao carregar responsáveis."); responsaveis=[]; }
+      else { responsaveis = data || []; }
+      renderResponsaveis();
+    }
+
+    async function adicionarResponsavel(){
+      const nome=(novoResponsavelNomeEl.value||"").trim();
+      const idref=(novoResponsavelIdEl.value||"").trim();
+      const cargo=(novoResponsavelCargoEl.value||"").trim();
+      if(!nome || !cargo){ alert("Informe nome e cargo!"); return; }
+
+      const payload = { nome, cargo };
+      if(idref) payload.id_ref = idref;
+
+      const { error } = await supabase.from("responsaveis").insert([payload]);
+      if(error){ alert("Erro ao salvar responsável: " + error.message); return; }
+
+      novoResponsavelNomeEl.value="";
+      novoResponsavelIdEl.value="";
+      novoResponsavelCargoEl.value="Dono";
+      await carregarResponsaveis();
+    }
+
+    async function removerResponsavel(id){
+      const { error } = await supabase.from("responsaveis").delete().eq("id", id);
+      if(error){ alert("Erro ao remover responsável: " + error.message); return; }
+      await carregarResponsaveis();
+    }
+
+    async function uparParaGerente(funcionario){
+      // Evita duplicidade: mesmo id_ref e cargo Gerente
+      const { data: existe, error: errCheck } = await supabase
+        .from("responsaveis").select("id")
+        .eq("id_ref", funcionario.id)
+        .eq("cargo", "Gerente")
+        .limit(1);
+      if(errCheck){ showError("Falha ao verificar responsáveis."); return; }
+      if(existe && existe.length>0){ alert("Este funcionário já está como Gerente."); return; }
+
+      const { error } = await supabase.from("responsaveis").insert([
+        { nome: funcionario.nome, id_ref: funcionario.id, cargo: "Gerente" }
+      ]);
+      if(error){ alert("Erro ao upar para Gerente: " + error.message); return; }
+      await carregarResponsaveis();
+    }
+
+    // ---------- Registros ----------
     async function carregarFuncionarios(){
       const { data, error } = await supabase.from("funcionarios").select("*").order("nome",{ascending:true});
       if(error){ console.error(error); showError("Erro ao carregar funcionários."); return; }
@@ -424,6 +515,7 @@
     async function limparRegistrosFuncionario(funcionarioId, nome){
       if(!confirm(`Deseja limpar TODOS os registros de ${nome} (ID: ${funcionarioId})? Esta ação não pode ser desfeita.`)) return;
       const { error } = await supabase.from("registros").delete().eq("funcionario_id", funcionarioId);
+      iferror:{}
       if(error){ alert("Erro ao limpar registros: " + error.message); return; }
       await carregarRegistros();
     }
@@ -448,98 +540,6 @@
         });
       }
       renderRanking(lista);
-    }
-
-    // ---------- Donos e Gerentes ----------
-    function renderResponsaveis(){
-      listaResponsaveisEl.innerHTML="";
-      if(!responsaveis || responsaveis.length===0){
-        listaResponsaveisEl.innerHTML = "<div class='muted'>Nenhum responsável cadastrado.</div>";
-        return;
-      }
-      responsaveis.forEach(r=>{
-        const item=document.createElement("div");
-        item.className="resp-item";
-
-        const left=document.createElement("div");
-        left.className="left";
-
-        const name=document.createElement("span");
-        name.className="name";
-        name.textContent=r.nome;
-
-        const idspan=document.createElement("span");
-        idspan.className="id";
-        idspan.textContent=`ID: ${r.id_ref ?? "-"}`;
-
-        const cargo=document.createElement("span");
-        cargo.className=`badge ${r.cargo}`;
-        cargo.textContent=r.cargo;
-
-        left.appendChild(name);
-        left.appendChild(idspan);
-        left.appendChild(cargo);
-
-        const remove=document.createElement("span");
-        remove.className="remove";
-        remove.textContent="Remover";
-        remove.addEventListener("click", async ()=>{
-          await removerResponsavel(r.id);
-        });
-
-        item.appendChild(left);
-        item.appendChild(remove);
-        listaResponsaveisEl.appendChild(item);
-      });
-    }
-
-    async function carregarResponsaveis(){
-      const { data, error } = await supabase.from("responsaveis").select("*").order("id",{ascending:true});
-      if(error){ console.error(error); showError("Erro ao carregar responsáveis."); responsaveis=[]; }
-      else { responsaveis = data || []; }
-      renderResponsaveis();
-    }
-
-    async function adicionarResponsavel(){
-      const nome=(novoResponsavelNomeEl.value||"").trim();
-      const idref=(novoResponsavelIdEl.value||"").trim();
-      const cargo=(novoResponsavelCargoEl.value||"").trim();
-      if(!nome || !cargo){ alert("Informe nome e cargo!"); return; }
-
-      const payload = { nome, cargo };
-      if(idref) payload.id_ref = idref;
-
-      const { error } = await supabase.from("responsaveis").insert([payload]);
-      if(error){ alert("Erro ao salvar responsável: " + error.message); return; }
-
-      novoResponsavelNomeEl.value="";
-      novoResponsavelIdEl.value="";
-      novoResponsavelCargoEl.value="Dono";
-      await carregarResponsaveis();
-    }
-
-    async function removerResponsavel(id){
-      const { error } = await supabase.from("responsaveis").delete().eq("id", id);
-      if(error){ alert("Erro ao remover responsável: " + error.message); return; }
-      await carregarResponsaveis();
-    }
-
-    async function uparParaGerente(funcionario){
-      // Evita duplicidade: mesmo id_ref e cargo Gerente
-      const { data: existe, error: errCheck } = await supabase
-        .from("responsaveis")
-        .select("id")
-        .eq("id_ref", funcionario.id)
-        .eq("cargo", "Gerente")
-        .limit(1);
-      if(errCheck){ showError("Falha ao verificar responsáveis."); return; }
-      if(existe && existe.length>0){ alert("Este funcionário já está como Gerente."); return; }
-
-      const { error } = await supabase.from("responsaveis").insert([
-        { nome: funcionario.nome, id_ref: funcionario.id, cargo: "Gerente" }
-      ]);
-      if(error){ alert("Erro ao upar para Gerente: " + error.message); return; }
-      await carregarResponsaveis();
     }
 
     // Eventos
